06 - 외부 라이브러리 사용하기 완료
외부 라이브러리, Parse 사용하기

--- a/FuseJS/06 - 외부 라이브러리 사용하기.md
+++ b/FuseJS/06 - 외부 라이브러리 사용하기.md
@@ -1,1 +1,35 @@
-# 작업 중입니다.
+#외부 라이브러리 사용하기
+Fuse는 외부 JavaScript 라이브러리를 사용할 수 있도록 노력하고 있습니다. 더 많은 외부 JavaScript 라이브러리를 사용할 수 있도록 지속적으로 성장하고, 호환성 개선을 위해 Polyfill을 개정할 것입니다.
+
+이 장에서는 사용 가능하거나 사용할 수 없는 라이브러리들의 목록과 해결방법 또는 주의사항에 대해 설명합니다.
+
+만약 외부 라이브러리를 테스트해보고 사용 가능/사용할 수 없음/해결 방법등을 ++[포럼](https://www.fusetools.com/community/forums)++ 이나 메일(support@fusetools.com)로 보내주십시오.
+
+> 이 목록은 FuseJS 개발자들에 의해 확장될 것입니다.
+
+##사용 가능한 라이브러리
+
+아래는 테스트 결과 사용가능한 외부 JavaScript 라이브러리입니다.
+
+++[Parse SDK](https://parse.com/docs/js/guide)++
+++[Moment.js](http://momentjs.com/)++
+
+
+#Parse 사용하기
+++[이곳](https://www.parse.com/docs/downloads)++에서 최신의 Parse JS SDK를 다운로드할 수 있습니다.
+
+JavaScript에서 Parse를 사용할 수 있으며, 다음과 같이 전역 리소스로 가져와 사용할 수 있습니다.
+```
+<JavaScript File="lastest-parse.js" ux:Global="parse"/>
+```
+UX 마크업의 최상위에 위치해준 뒤, JavaScript 파일에서 `require('Parse').Parse`를 작성해 사용할 수 있습니다.
+
+Parse 앱은 Parse 웹사이트 대시보드에서 "Create a new app"을 선택함으로 만들 수 있습니다. 그리고 자신의 "애플리케이션 ID"와 "JavaScript 키"를 다음과 같이 `Parse.initialize(appID, jskey)`로 등록해 사용할 수 있습니다.
+
+```
+<JavaScript>
+    var Parse = require('Parse').Parse;
+    Parse.initialize(appID, jsKey);
+</JavaScript>
+```
+이제 Parse를 사용할 준비를 마쳤습니다. Parse를 이용한 새로운 앱을 만든다면 ++[가이드](https://www.parse.com/docs/js/guide)++를 보는게 좋습니다. Fuse에 Parse를 백엔드로 사용하기 위한 더 많은 예제들은 ++[여기](https://www.fusetools.com/community/examples/todoparseexample)++서 볼 수 있습니다.
