FuseJS/05 - 디버깅, Uno/02 - 네이티브 API 사용하기 완

--- a/FuseJS/05 - 디버깅.md
+++ b/FuseJS/05 - 디버깅.md
@@ -1,1 +1,12 @@
-# 작업 중입니다.
+##디버깅
+Fuse에서 JavaScript에 의한 디버깅은 Safari와 iOS만 지원하고있습니다.
+
+- 설치
+ - Safari 웹 속성을 활성화합니다. 설정 앱의 `Safari/고급/웹 속성`을 확인하십시오.
+ - 호스트 컴퓨터의 Safari를 실행하고, 개발 메뉴를 활성화합니다. Safari의 `환경설정`메뉴 아래 `고급/메뉴 바에 개발 메뉴 보여짐`을 확인하십시오.
+
+- 디버거 시작하기
+ - 기기에 프로젝트를 빌드, 실행합니다.
+ - 호스트 컴퓨터의 Safari를 실행하고, 개발 메뉴를 클릭합니다. 개발 메뉴의 JSContect를 클릭했을 때, 장치의 이름이 하위 메뉴에 있어야합니다. 웹 속성 인스턴스를 열고 앱의 JavaScript 코드를 디버깅할 수 있도록 합니다.
+
+**++[디버깅 소개영상](https://www.youtube.com/embed/EDjymiMxHSw)++**
